--- a/style.css
+++ b/style.css
@@ -41,9 +41,43 @@
     aspect-ratio: 1/1;
 }
 
+.container .toolbar .color{
+    display: flex;
+flex-wrap: wrap;
+}
 .container .toolbar .color div {
     width: 20px;
     aspect-ratio: 1/1;
     margin: 1px;
-    float: left;
+}
+
+.buttons{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    gap: 5px;
+}
+.buttons .btn{
+    width: 150px;
+    height: 40px;
+    background-color: #000;
+    border: 1px solid #fff;
+    color: #fff;
+    cursor: pointer;
+}
+.buttons .btn:hover{
+    animation: shake 0.2s linear;
+}
+
+@keyframes shake {
+    
+    0% {
+        transform: translateX(0);}
+    50% {
+        transform: translateX(5px);
+    }
+    100% {
+        transform: translateX(-5px);
+    }
 }
