--- a/style.css
+++ b/style.css
@@ -14,19 +14,20 @@
 .container .heading {
     min-height: 200px;
     background-color: #000;
+    padding-bottom: 30px;
 }
 
 .container .heading h1 {
     text-align: center;
     padding: 20px;
     color: white;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 600;
     font-family: 'Press Start 2P', cursive;
 }
 
 .container .art {
-    height: calc(100vh - 200px);
+    max-height: calc(100vh - 200px);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -41,42 +42,51 @@
     aspect-ratio: 1/1;
 }
 
-.container .toolbar .color{
+.container .toolbar .color {
     display: flex;
-flex-wrap: wrap;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
 }
+
 .container .toolbar .color div {
     width: 20px;
     aspect-ratio: 1/1;
     margin: 1px;
 }
 
-.buttons{
+.buttons {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 20px;
     gap: 5px;
+    flex-wrap: wrap;
 }
-.buttons .btn{
+
+.buttons .btn {
     width: 150px;
-    height: 40px;
+    height: 30px;
     background-color: #000;
     border: 1px solid #fff;
     color: #fff;
     cursor: pointer;
 }
-.buttons .btn:hover{
+
+.buttons .btn:hover {
     animation: shake 0.2s linear;
 }
 
 @keyframes shake {
-    
+
     0% {
-        transform: translateX(0);}
+        transform: translateX(0);
+    }
+
     50% {
         transform: translateX(5px);
     }
+
     100% {
         transform: translateX(-5px);
     }
